# meeting-notes-app

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  RESEARCH.md  bootstrap_repo.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/agents/: notes-intelligence.md  qa-reviewer.md  rust-audio.md  whisper-integrator.md
apps/desktop-tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json  mobile.json
apps/desktop-tauri/src-tauri/plugins/speech-recognizer/: Cargo.toml  build.rs
apps/desktop-tauri/src-tauri/plugins/speech-recognizer/ios/: Package.swift
apps/desktop-tauri/src-tauri/plugins/speech-recognizer/ios/Sources/: SpeechRecognizerPlugin.swift
apps/desktop-tauri/src-tauri/plugins/speech-recognizer/permissions/: default.toml
apps/desktop-tauri/src-tauri/plugins/speech-recognizer/permissions/autogenerated/: reference.md
apps/desktop-tauri/src-tauri/plugins/speech-recognizer/permissions/schemas/: schema.json
apps/desktop-tauri/src-tauri/plugins/speech-recognizer/src/: commands.rs  lib.rs  mobile.rs  models.rs
apps/desktop-tauri/src-tauri/src/: audio_capture.rs  audio_resample.rs  commands.rs  lib.rs  main.rs  transcription.rs
docs/: ios-native-stt-issue.md
docs/architecture/: system-flow.md
tests/: capture.test.ts  diarization.test.ts  export.test.ts  intelligence.test.ts  orchestrator.test.ts  storage.test.ts  transcription.test.ts
(+41 files in other folders)
