[package]
name = "meeting-notes"
version = "0.1.0"
edition = "2024"

[lib]
name = "meeting_notes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-audio-recorder = "0.1"
tauri-plugin-speech-recognizer = { path = "plugins/speech-recognizer" }
tauri-plugin-keychain = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"
whisper-rs = { version = "0.15", features = ["metal"] }
rubato = "0.16"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
