[package]
name = "tauri-plugin-speech-recognizer"
version = "0.1.0"
edition = "2024"
links = "tauri-plugin-speech-recognizer"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
